apenas um teste no commit

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </form>
 
       <div class="d-flex justify-content-between" style="margin-top:10px;">
-        <a href="" style="text-decoration: none; color:#f2f2f2;">Esqueceu a senha?</a>
+        <a href="" style="text-decoration: none; color:#f2f2f2;">Esqueci a senha</a>
         <a href="" style="text-decoration: none; color:#f2f2f2;">Cadastrar-se</a>
       </div>
       <p class="text-center" style="color: gray; margin-top:45px;">© Todos os direitos reservados.</p>
